plugins {
    id 'java'
    id 'jvm-toolchains'
}

allprojects {
    group = 'com.lwidev.survisland'
    version = '1.0-SNAPSHOT'
    
    apply plugin: 'java'
    
    repositories {
        mavenCentral()
        maven {
            name = "papermc-repo"
            url = "https://repo.papermc.io/repository/maven-public/"
        }
        maven {
            name = "sonatype"
            url = "https://oss.sonatype.org/content/groups/public/"
        }
        maven {
            name = "jitpack"
            url = "https://jitpack.io"
        }
    }
    
    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(25)
        }
    }

    tasks.withType(JavaCompile).configureEach {
        options.encoding = 'UTF-8'
        options.release.set(25)
    }

    tasks.withType(Javadoc).configureEach {
        options.encoding = 'UTF-8'
        options.memberLevel = JavadocMemberLevel.PUBLIC
        failOnError = true
    }

}


// Task de développement
tasks.register('dev') {
    group = 'development'
    description = 'Lance le serveur Minecraft avec bot Discord intégré'
    
    dependsOn ':plugin:build'
    
    doLast {
        project(':plugin').tasks.runServer.actions.each { it.execute(project(':plugin').tasks.runServer) }
    }
}
